--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/http-status-codes": "^1.2.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^8.0.29",
     "@types/yup": "^0.29.11",
     "ts-node": "3.3.0",
@@ -15,10 +17,13 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.10",
     "typeorm": "0.2.31",
+    "typeorm-pagination": "^2.0.1",
     "yup": "^0.32.9",
     "yup-locale-pt": "^0.0.6"
   },
