--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,6 +3,7 @@
   "type": "postgres",
   "host": "localhost",
   "port": 5432,
+  "cache": true,
   "username": "postgres",
   "password": "postgres",
   "database": "finance-app",
