--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
+    "nestjs-typeorm-paginate": "^2.3.2",
     "nodemon": "^2.0.7",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.10",
