--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/express": "^4.17.11",
     "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.5",
     "@types/node": "^8.0.29",
     "@types/yup": "^0.29.11",
     "ts-node": "3.3.0",
@@ -20,6 +21,7 @@
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "nestjs-typeorm-paginate": "^2.3.2",
     "nodemon": "^2.0.7",
     "pg": "^8.4.0",
