refactor: atualização na resposta dos lançamentos - adição de dados da categorai

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=3333
 SALTS=10
 JWT_TOKEN_PRIVATE_KEY=0BE8FDddD568A4DdA376EF22d95E17D8
 JWT_REFRESH_TOKEN_PRIVATE_KEY=6B2FB88C13A2ABC2e555135898212CF1bE73BbCcC
+API=http://localhost:3333
