--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.5",
     "@types/node": "^8.0.29",
+    "@types/nodemailer": "^6.4.2",
     "@types/yup": "^0.29.11",
     "ts-node": "3.3.0",
     "typescript": "3.3.3333"
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "nestjs-typeorm-paginate": "^2.3.2",
+    "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.10",
